# GitlabCI

./: pyproject.toml
source/: ci_yml.rst  conf.py  index.rst  jobs.rst  pipelines.rst  piplines.rst  runners.rst  ssh_keys.rst  troubleshooting.rst  user_guide.rst  variables.rst
source/_static/: custom.css
tests/: test_gitlab_ci.py
