[tool.poetry]
name = "gitlab-ci"
version = "0.1.0"
description = ""
authors = ["neo <neo@fugu.ooo>"]

[tool.poetry.dependencies]
python = "^3.9"
furo = "^2022.4.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
